[package]
name = "fusion-test"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
incremental = false
strip = true
lto = true
panic = "unwind"

[dependencies]
serde = "1.0.219"
serde_derive = "1.0.219"
chrono = { version = "0.4.41", features = ["serde"] }
anyhow = "1.0.98"
uuid = { version = "1.17.0", features = ["v4"] }
csv = "1.3.1"
dotenvy = "0.15.7"

tokio = { version = "1.45.1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] } #is the async framework that is the runtime for axum

datafusion = "45.0.0"
datafusion_iceberg = "0.7.0"
iceberg-rust = "0.7.0"
iceberg-s3tables-catalog = "0.7.0"
livy = "0.5.0"
parquet2 = "0.17.2"

aws-sdk-s3tables = "1.23.0"
aws-config = "1.6.3"
